@@ -54,7 +54,7 @@ CmdInfo::CmdInfo ()
   // Once the test suite is completely modified, this can be corrected.
   _displays_id           = false;
   _needs_gc              = false;
-  _uses_context          = true;
+  _uses_context          = false;
   _accepts_filter        = true;
   _accepts_modifications = false;
   _accepts_miscellaneous = false;
