@@ -121,6 +121,8 @@
 - TW-1651 Provide opt-out of filter parser's id treatment (thanks to Daniel
           Shahaf).
 - TW-1652 task rm misparsed (thanks to Daniel Shahaf).
+- TW-1653 info report regression; shouldn't be context sensitive (thanks to
+          David Patrick).
 - Prevent potential task duplication during import for non-pending tasks.
 - Show the active context in "context list", if any is active.
 - Fix "task edit" dropping annotation text after newlines.
